[gd_scene load_steps=2 format=3 uid="uid://4ueb487g20pa"]

[ext_resource type="Script" path="res://ui/connection_menu.gd" id="1_h5ord"]

[node name="ConnectionMenu" type="PanelContainer"]
offset_right = 212.0
offset_bottom = 74.0
script = ExtResource("1_h5ord")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AddressInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "HOST"

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "CONNECT"
